@@ -1,3 +1,7 @@
+2015-01-21 04:00 +0000
+- twitch: updated new vod download
+
+
 2015-01-21 01:52 +0000
 - twitch: updated new vod master playlist parsing
 
